--- a/Csinkyu/Csinkyu.vcxproj.filters
+++ b/Csinkyu/Csinkyu.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="myDraw.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GlovalFunc.h">
