--- a/Csinkyu/Csinkyu.vcxproj.filters
+++ b/Csinkyu/Csinkyu.vcxproj.filters
@@ -6,6 +6,7 @@
     <ClCompile Include="myDraw.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="GameManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GlovalConst.h" />
@@ -13,5 +14,6 @@
     <ClInclude Include="myDraw.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="GameManager.h" />
   </ItemGroup>
 </Project>
