--- a/Csinkyu/.gitignore
+++ b/Csinkyu/.gitignore
@@ -6,6 +6,12 @@
 # それらのファイルは無視してください、という設定をするところ。
 #-------------------------------------------------------------------------
 
-# このパスにあるファイルは無視
+# よく分からない大量のファイルを除外
 .vs/
 Debug/
+
+# プロジェクト本体に関するファイルを除外
+*.sln
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
