プレイヤーの斜め移動製作

--- a/Csinkyu/Csinkyu.vcxproj.filters
+++ b/Csinkyu/Csinkyu.vcxproj.filters
@@ -2,15 +2,13 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="GlovalFunc.cpp" />
     <ClCompile Include="myDraw.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GlovalConst.h" />
-    <ClInclude Include="GlovalFunc.h" />
+    <ClInclude Include="Gloval.h" />
     <ClInclude Include="myDraw.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="GameManager.h" />
