--- a/Csinkyu/Csinkyu.vcxproj
+++ b/Csinkyu/Csinkyu.vcxproj
@@ -21,7 +21,6 @@
   <ItemGroup>
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="GlovalFunc.cpp" />
     <ClCompile Include="myDraw.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -33,8 +32,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameManager.h" />
-    <ClInclude Include="GlovalConst.h" />
-    <ClInclude Include="GlovalFunc.h" />
+    <ClInclude Include="Gloval.h" />
     <ClInclude Include="myDraw.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="stdafx.h" />
