エネミー作成

--- a/Csinkyu/Csinkyu.vcxproj.filters
+++ b/Csinkyu/Csinkyu.vcxproj.filters
@@ -7,6 +7,7 @@
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Obstacle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GlovalConst.h" />
@@ -15,5 +16,10 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Obstacle.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="image\Player.png" />
+    <Image Include="image\enemy.png" />
   </ItemGroup>
 </Project>
