--- a/Csinkyu/Csinkyu.vcxproj
+++ b/Csinkyu/Csinkyu.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="GlovalFunc.cpp" />
     <ClCompile Include="myDraw.cpp" />
+    <ClCompile Include="Obstacle.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -36,8 +37,13 @@
     <ClInclude Include="GlovalConst.h" />
     <ClInclude Include="GlovalFunc.h" />
     <ClInclude Include="myDraw.h" />
+    <ClInclude Include="Obstacle.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="stdafx.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="image\enemy.png" />
+    <Image Include="image\Player.png" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
