--- a/Csinkyu/Csinkyu.vcxproj
+++ b/Csinkyu/Csinkyu.vcxproj
@@ -21,8 +21,9 @@
   <ItemGroup>
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="myDraw.cpp" />
-    <ClCompile Include="Obstacle.cpp" />
+    <ClCompile Include="myDrawST.cpp" />
+    <ClCompile Include="myInputST.cpp" />
+    <ClCompile Include="Obstacle2.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -34,8 +35,9 @@
   <ItemGroup>
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Gloval.h" />
-    <ClInclude Include="myDraw.h" />
-    <ClInclude Include="Obstacle.h" />
+    <ClInclude Include="myDrawST.h" />
+    <ClInclude Include="myInputST.h" />
+    <ClInclude Include="Obstacle2.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
