--- a/Csinkyu/Csinkyu.vcxproj
+++ b/Csinkyu/Csinkyu.vcxproj
@@ -23,7 +23,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="myDrawST.cpp" />
     <ClCompile Include="myInputST.cpp" />
-    <ClCompile Include="Obstacle2.cpp" />
+    <ClCompile Include="Obstacle.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -37,7 +37,7 @@
     <ClInclude Include="Gloval.h" />
     <ClInclude Include="myDrawST.h" />
     <ClInclude Include="myInputST.h" />
-    <ClInclude Include="Obstacle2.h" />
+    <ClInclude Include="Obstacle.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
