--- a/Csinkyu/Csinkyu.vcxproj.filters
+++ b/Csinkyu/Csinkyu.vcxproj.filters
@@ -7,10 +7,10 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="myDrawST.cpp" />
     <ClCompile Include="myInputST.cpp" />
-    <ClCompile Include="Obstacle.cpp" />
     <ClCompile Include="Obstacle3.cpp" />
-    <ClCompile Include="Global.cpp" />
     <ClCompile Include="Obstacle2.cpp" />
+    <ClCompile Include="Obstacle.cpp" />
+    <ClCompile Include="myCalcST.cpp" />
     <ClCompile Include="Obstacle4.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -20,9 +20,10 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="myDrawST.h" />
     <ClInclude Include="myInputST.h" />
-    <ClInclude Include="Obstacle.h" />
     <ClInclude Include="Obstacle3.h" />
     <ClInclude Include="Obstacle2.h" />
+    <ClInclude Include="Obstacle.h" />
+    <ClInclude Include="myCalcST.h" />
     <ClInclude Include="Obstacle4.h" />
   </ItemGroup>
   <ItemGroup>
