スローモードの時間制限途中

--- a/Csinkyu/Csinkyu.vcxproj.filters
+++ b/Csinkyu/Csinkyu.vcxproj.filters
@@ -12,6 +12,7 @@
     <ClCompile Include="Obstacle.cpp" />
     <ClCompile Include="myCalcST.cpp" />
     <ClCompile Include="Obstacle4.cpp" />
+    <ClCompile Include="myTimerST.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Global.h" />
@@ -25,6 +26,7 @@
     <ClInclude Include="Obstacle.h" />
     <ClInclude Include="myCalcST.h" />
     <ClInclude Include="Obstacle4.h" />
+    <ClInclude Include="myTimerST.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="image\Player.png" />
