--- a/Csinkyu/Csinkyu.vcxproj.filters
+++ b/Csinkyu/Csinkyu.vcxproj.filters
@@ -13,6 +13,7 @@
     <ClCompile Include="myCalcST.cpp" />
     <ClCompile Include="Obstacle4.cpp" />
     <ClCompile Include="myTimerST.cpp" />
+    <ClCompile Include="Item.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Global.h" />
@@ -27,6 +28,7 @@
     <ClInclude Include="myCalcST.h" />
     <ClInclude Include="Obstacle4.h" />
     <ClInclude Include="myTimerST.h" />
+    <ClInclude Include="Item.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="image\Player.png" />
