Revert "Merge branch 'main' into Reflection2"
This reverts commit 912fee869681c2245c613f463a60c62beecf3904, reversing
changes made to 4bbcaad589a8d5594c1bb876d4b59a2ad79afa0c.

--- a/Csinkyu/Csinkyu.vcxproj
+++ b/Csinkyu/Csinkyu.vcxproj
@@ -36,6 +36,7 @@
     <ClCompile Include="Obstacle3.cpp" />
     <ClCompile Include="Obstacle4.cpp" />
     <ClCompile Include="Obstacle4main_od.cpp" />
+    <ClCompile Include="Obstacle4main_kr.cpp" />
     <ClCompile Include="Obstacle5.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="stdafx.cpp">
