--- a/Csinkyu/Csinkyu.vcxproj
+++ b/Csinkyu/Csinkyu.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MapGimmickLaser.cpp" />
     <ClCompile Include="MapGimmickLaserManager.cpp" />
     <ClCompile Include="myCalcST.cpp" />
     <ClCompile Include="myDrawST.cpp" />
@@ -49,6 +50,7 @@
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Global.h" />
     <ClInclude Include="Item.h" />
+    <ClInclude Include="MapGimmickLaser.h" />
     <ClInclude Include="MapGimmickLaserManager.h" />
     <ClInclude Include="myCalcST.h" />
     <ClInclude Include="myDrawST.h" />
