自作ライブラリ大進化。KR_Libraryと名付ける

--- a/Csinkyu/Csinkyu.vcxproj
+++ b/Csinkyu/Csinkyu.vcxproj
@@ -25,16 +25,17 @@
     <ClCompile Include="BackGround.cpp" />
     <ClCompile Include="EffectManager.cpp" />
     <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="Global.h" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MapGimmickLaser.cpp" />
-    <ClCompile Include="myCalcST.cpp" />
-    <ClCompile Include="myDrawST.cpp" />
-    <ClCompile Include="myFileST.cpp" />
-    <ClCompile Include="myInputST.cpp" />
-    <ClCompile Include="myObjectST.cpp" />
-    <ClCompile Include="mySoundST.cpp" />
-    <ClCompile Include="myTimerST.cpp" />
+    <ClCompile Include="KR_Lib\KR_Calc.cpp" />
+    <ClCompile Include="KR_Lib\KR_Draw.cpp" />
+    <ClCompile Include="KR_Lib\KR_File.cpp" />
+    <ClCompile Include="KR_Lib\KR_Input.cpp" />
+    <ClCompile Include="KR_Lib\KR_Object.cpp" />
+    <ClCompile Include="KR_Lib\KR_Sound.cpp" />
+    <ClCompile Include="KR_Lib\KR_Timer.cpp" />
     <ClCompile Include="LaserManager.cpp" />
     <ClCompile Include="Meteo.cpp" />
     <ClCompile Include="MeteoManager.cpp" />
@@ -53,16 +54,16 @@
     <ClInclude Include="BackGround.h" />
     <ClInclude Include="EffectManager.h" />
     <ClInclude Include="GameManager.h" />
-    <ClInclude Include="Global.h" />
+    <ClInclude Include="KR_Lib\KR_Global.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="MapGimmickLaser.h" />
-    <ClInclude Include="myCalcST.h" />
-    <ClInclude Include="myDrawST.h" />
-    <ClInclude Include="myFileST.h" />
-    <ClInclude Include="myInputST.h" />
-    <ClInclude Include="myObjectST.h" />
-    <ClInclude Include="mySoundST.h" />
-    <ClInclude Include="myTimerST.h" />
+    <ClInclude Include="KR_Lib\KR_Calc.h" />
+    <ClInclude Include="KR_Lib\KR_Draw.h" />
+    <ClInclude Include="KR_Lib\KR_File.h" />
+    <ClInclude Include="KR_Lib\KR_Input.h" />
+    <ClInclude Include="KR_Lib\KR_Object.h" />
+    <ClInclude Include="KR_Lib\KR_Sound.h" />
+    <ClInclude Include="KR_Lib\KR_Timer.h" />
     <ClInclude Include="LaserManager.h" />
     <ClInclude Include="Meteo.h" />
     <ClInclude Include="MeteoManager.h" />
