--- a/Csinkyu/Csinkyu.vcxproj.filters
+++ b/Csinkyu/Csinkyu.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClCompile Include="KR_Lib\KR_Object.cpp" />
     <ClCompile Include="Global.h" />
     <ClCompile Include="FireworksObstacle.cpp" />
+    <ClCompile Include="KR_Lib\KR_Debug.cpp" />
+    <ClCompile Include="KR_Lib\KR_Main.cpp" />
+    <ClCompile Include="KR_Lib\KR_Scene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LaserManager.h" />
@@ -55,5 +58,8 @@
     <ClInclude Include="KR_Lib\KR_Input.h" />
     <ClInclude Include="KR_Lib\KR_Object.h" />
     <ClInclude Include="FireworksObstacle.h" />
+    <ClInclude Include="KR_Lib\KR_Debug.h" />
+    <ClInclude Include="KR_Lib\KR_Main.h" />
+    <ClInclude Include="KR_Lib\KR_Scene.h" />
   </ItemGroup>
 </Project>
